fix header layout bug

--- a/views/assets/stylesheets/notifications/notifications.scss
+++ b/views/assets/stylesheets/notifications/notifications.scss
@@ -1,5 +1,5 @@
 .qor-notifications {
-    margin: -8px -16px !important;
+    margin: 0 -16px !important;
     >.qor-notifications__item {
         margin: 8px 0;
         padding: 8px 12px;
